--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,36 +14,25 @@ body {
   background-repeat: no-repeat;
   background-position: center; }
 
-#navContainer {
-  background-color: grey;
-  margin: 10px;
+nav ul li {
+  font-family: 'Lobster', cursive;
+  font-size: 20px;
   display: inline;
-  width: 300px; }
-
-.nav {
-  display: inline;
-  margin: auto;
-  padding: 20px; }
-
-/* .box{
-  display: flex;
-  justify-content: center;
-  height: auto;
-  width: 100%;
-
-} */
-.containerDiv {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 1000px;
-  height: 1000px; }
-
-#cont1, #cont2, #cont3, #cont4 {
-  display: flex;
-  height: 60%;
-  width: 40%;
-  margin: 15px;
+  margin: -2px;
   padding: 20px;
+  background-color: grey;
+  width: 500px; }
+
+/* .container{
+  max-width:
+  height: auto;
+} */
+.reddit {
+  flex: 0 0 40%;
+  height: 300px;
+  width: 400px;
+  background-color: white;
+  margin: 15px;
+  padding: 10px;
   position: relative;
-  background-color: white; }
+  display: inline-block; }
