--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,7 +24,6 @@ body {
   background-image: url('/assets/header_bg.svg');
   background-repeat: no-repeat;
   background-position: center;
-
 }
 
 nav ul li {
@@ -33,18 +32,13 @@ nav ul li {
   display: inline;
   margin: -2px;
   padding: 20px;
-  background-color: grey;
+  background-color: darkgrey;
   width: 500px;
 }
 
-/* .container{
-  max-width:
-  height: auto;
-} */
-
 .reddit {
   flex: 0 0 40%;
-  height: 300px;
+  height: 400px;
   width: 400px;
   background-color: white;
   margin: 15px;
